added projects page

--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
         </abbr>
         <div class="chocomint-nav-buttons">
           <a class="button" href="https://diegobarmor.github.io/">Bio</a>
-          <a class="button" href="https://diegobarmor.github.io/index.html">CV [WIP]</a>
-          <select id="project-select">
-            <optgroup label="Projects">
-              <option value="uni-projects">Uni Projects</option>
-              <option value="personal-projects">Personal Projects</option>
-            </optgroup>
-          </select>
+          <a class="button" href="https://diegobarmor.github.io/projects.html">Projects</a>
+          <!-- <a class="button" href="https://diegobarmor.github.io/cv.html">CV</a> -->
         </div>
       </nav>
     </header>
@@ -87,6 +82,5 @@
   </body>
 
   <script src="https://raw.githack.com/DiegoBarMor/chocomint-css/main/chocomint.min.js"></script>
-  <script src="navbar.js"></script>
 
 </html>
