--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
             <img src="images/projects/prisma-tui.png" alt="prisma-tui Project">
           </a>
           <h2><a href="https://pypi.org/project/prisma-tui/" target="_blank">prisma-tui</a></h2>
-          A TUI framework based on the idea of "multi-layered transparency" composition.
+          Python TUI framework based on the idea of "multi-layered transparency" composition.
           <a href="https://github.com/DiegoBarMor/prisma-tui" target="_blank"><i class="fa fa-github"></i></a>
         </div>
 
